--- a/_config.yml
+++ b/_config.yml
@@ -25,5 +25,6 @@ dribbble_username:    example  # Replace this with your Dribbble username
 
 # Build settings
 markdown: kramdown
-highlighter: pygments
+# highlighter: pygments
+highlighter: rouge
 
