--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,14 @@
 title: Project. __ Junho Park
 email: cnaa97@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Junho Park is a Front-end Developer and Designer living and working in Seoul, South Korea.
+  Park held a bachelor’s degree of Fine Arts, majored in Spatial Design at Kookmin University. Now, In order to solve his problem, He dive into the web. He had been studying about Web Front-End Develop. He is interested in Interactive Design with web, Creative, Coding.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "" # the base hostname & protocol for your site http://yourdomain.com
+twitter_username: cnaa97
+github_username:  cnaa97
 
 # Build settings
 markdown: kramdown
+
+include: ['_pages']
