--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,4 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+
 
 # Site settings
 title: Project. __ Junho Park
@@ -13,10 +8,18 @@ description: > # this means to ignore newlines until "baseurl:"
   Park held a bachelor’s degree of Fine Arts, majored in Spatial Design at Kookmin University. Now, In order to solve his problem, He dive into the web. He had been studying about Web Front-End Develop. He is interested in Interactive Design with web, Creative, Coding.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site http://yourdomain.com
+
+# Permalinks
+permalink: /:categories/:title
+
 twitter_username: cnaa97
 github_username:  cnaa97
 
 # Build settings
 markdown: kramdown
+
+plugins:
+  - jekyll-paginate
+paginate: 5
 
 include: ['_pages']
