--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Junho Park is a Front-end Developer and Designer living and working in Seoul, South Korea.
   Park held a bachelor’s degree of Fine Arts, majored in Spatial Design at Kookmin University. Now, In order to solve his problem, He dive into the web. He had been studying about Web Front-End Develop. He is interested in Interactive Design with web, Creative, Coding.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site http://yourdomain.com
+url: "http://junojunho.com" # the base hostname & protocol for your site http://yourdomain.com
 
 # Permalinks
 permalink: /:categories/:title
