hide design career

--- a/_data/ko.yml
+++ b/_data/ko.yml
@@ -59,7 +59,6 @@ cv:
         - enzyme
         - jquery
     - year: '2017'
-
   exp:
     - id: bwg
       title: 뱅크웨어글로벌
@@ -67,12 +66,12 @@ cv:
       term: '2016.11 - 2018.02'
       desc1: React, Redux 기반 SPA 개발
       desc2: 뱅크웨어글로벌 연구소에서 프론트엔드 팀에 속하여 일했습니다. React 기반의 기업용 소프트웨어의 화면을 개발했으며, SI 프로젝트의 프론트엔드를 맡기도 했습니다. <br> 주로 React를 다루며, 컴포넌트를 만들어 Jest, Enzyme 으로 테스트까지 다루었습니다. 오픈소스 기반 컴포넌트에서 버그를 찾아 풀리퀘스트 했던 경험도 있으며, nodeJS를 이용해 간단한 SVG 아이콘 관리 툴도 개발했습니다.
-    - id: 
-      title: 스마투스
-      roll: UX/UI 디자이너
-      term: '2015.07 - 2015.12'
-      desc1: 웹, 모바일 UX/UI 디자인, 그래픽 디자인, 퍼블리싱 (HTML, CSS)
-      desc2: 스마투스에서 UI 디자이너로 일을 했습니다. 영어 교육 플랫폼인 비네이티브 프로 웹/앱 UI 작업에 참여했으며, 마케팅 리소스를 디자인하기도 했습니다. 신규 서비스 웹페이지를 퍼블리싱하여 프로토타이핑 했습니다.
+    # - id: 
+    #   title: 스마투스
+    #   roll: UX/UI 디자이너
+    #   term: '2015.07 - 2015.12'
+    #   desc1: 웹, 모바일 UX/UI 디자인, 그래픽 디자인, 퍼블리싱 (HTML, CSS)
+    #   desc2: 스마투스에서 UI 디자이너로 일을 했습니다. 영어 교육 플랫폼인 비네이티브 프로 웹/앱 UI 작업에 참여했으며, 마케팅 리소스를 디자인하기도 했습니다. 신규 서비스 웹페이지를 퍼블리싱하여 프로토타이핑 했습니다.
   project:
     - id: commoners
       title: 포트폴리오/블로그 홈페이지 풀스택 개발
