--- a/_data/ko.yml
+++ b/_data/ko.yml
@@ -1,6 +1,14 @@
 lang:
   ko: Ko
   en: En
+footer:
+  home: 홈
+  about: 소개
+  cv: CV
+  mailme: 이메일
+  subscribe: "subscribe "
+  rss: vis RSS
+  feedly: Feedly에서 구독하기
 common:
   github: 깃허브
   linkedin: 링크드인
@@ -25,15 +33,15 @@ cv:
   timeline:
     - title: 포트폴리오 홈페이지 풀스택 개발
       link: '#commoners'
-      tag: 
+      tag:
         - react (nextJS)
         - nodeJS
         - express
         - mongodb
         - AWS
     - title: 가상화폐 홈페이지 개발
-      link: 
-      tag: 
+      link:
+      tag:
         - vue
         - php
         - jquery
@@ -43,13 +51,13 @@ cv:
     - year: '2018'
     - title: 웹 기반 하이브리드앱 SPA 개발
       link: '#farota'
-      tag: 
+      tag:
         - react
         - redux
         - jquery
     - title: 리액트 기반 SPA 개발
       link: '#bwg'
-      tag: 
+      tag:
         - react
         - redux
         - sass
@@ -60,13 +68,21 @@ cv:
         - jquery
     - year: '2017'
   exp:
+    - id: 11st
+      title: 11번가
+      roll: 프론트엔드 개발자
+      term: '2018.11 - 현재'
+    - id: skp
+      title: SK Planet
+      roll: 프론트엔드 개발자
+      term: '2018.07 - 2018.10 (11번가 분사)'
     - id: bwg
       title: 뱅크웨어글로벌
       roll: 프론트엔드 개발자
       term: '2016.11 - 2018.02'
       desc1: React, Redux 기반 SPA 개발
       desc2: 뱅크웨어글로벌 연구소에서 프론트엔드 팀에 속하여 일했습니다. React 기반의 기업용 소프트웨어의 화면을 개발했으며, SI 프로젝트의 프론트엔드를 맡기도 했습니다. <br> 주로 React를 다루며, 컴포넌트를 만들어 Jest, Enzyme 으로 테스트까지 다루었습니다. 오픈소스 기반 컴포넌트에서 버그를 찾아 풀리퀘스트 했던 경험도 있으며, nodeJS를 이용해 간단한 SVG 아이콘 관리 툴도 개발했습니다.
-    # - id: 
+    # - id:
     #   title: 스마투스
     #   roll: UX/UI 디자이너
     #   term: '2015.07 - 2015.12'
@@ -112,7 +128,7 @@ cv:
     - title: 2014 국민대 실내디자인학과 졸업전시회
       term: '2014.10.22 - 28'
       loc: 아라아트센터
-      desc: 
+      desc:
     - title: 제7회 유니버설 디자인 수상작 전시
       term: '2012.12.17 - 21'
       loc: 혜화역
@@ -120,4 +136,9 @@ cv:
     # - title: 씨게이트 하드봇 공모전 수상작 전시
     #   term: '2012.07.08'
     #   loc: 아트센터 에비뉴
-    #   desc: 
+    #   desc:
+front-end: 프론트엔드
+design: 디자인
+vision: 비전
+start-up: 스타트업
+project: 프로젝트
