update all of open graph

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,7 @@ title: "주노준호 블로그 :: tech + future + project"
 sitename: 주노준호 블로그
 email: cnaa97@gmail.com
 description: >
-  Junho Park is a Front-end Developer and Designer living and working in Seoul, South Korea.
-  Park held a bachelor’s degree of Fine Arts, majored in Spatial Design.
+  정리하는 블로그
 baseurl: ""
 url: "https://junojunho.com"
 linkedIn: "https://www.linkedin.com/in/cnaa97"
