change site title

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 
 
 # Site settings
-title: "주노준호 블로그 :: tech + future + project"
+title: "주노준호 블로그"
+subtitle: ":: tech + future + project"
 sitename: 주노준호 블로그
 email: cnaa97@gmail.com
 description: >
