--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-
-
 # Site settings
 title: "주노준호 블로그"
-subtitle: ":: tech + future + project"
+subtitle: ""
 sitename: 주노준호 블로그
 email: cnaa97@gmail.com
 description: >
@@ -34,4 +32,4 @@ assets:
 
 # Language
 languages: ["ko", "en"]
-include: ['_pages']
+include: ["_pages"]
