--- a/.github/deploy_gh-pages.yml
+++ b/.github/deploy_gh-pages.yml
@@ -7,26 +7,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.11.0
-        with:
-          access_token: ${{ secrets.GITHUB_TOKEN }}
-
       - uses: actions/checkout@v3
 
-      - name: Use Node.js 18.x
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
+          cache: "npm"
 
-      - run: npm run build-prod
-        env:
-          CI: true
+      - name: Build
+        run: |
+          npm i
+          npm run build-prod
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: out
+          publish_dir: ./out
