--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,17 +17,17 @@ collections:
   create: true
   slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
   fields:
-    - { name: title, label: Title, widget: string }
-    - { name: body, label: Body, widget: markdown }
-    - { name: slug, label: Slug, widget: string }
-    - label: "Tags"
+    - { name: title, label: 제목, widget: string }
+    - { name: body, label: 본문, widget: markdown }
+    - { name: slug, label: 주소, widget: string }
+    - label: "태그"
       name: "tags"
       widget: "list"
-    - label: "Authors"
+    - label: "작성자"
       name: "authors"
       widget: "list"
-      fields:
-        - { name: name, label: Name, widget: string }
-        - { name: title, label: Title, widget: string }
-        - { name: url, label: URL, widget: string }
-        - { name: imageUrl, label: ImageURL, widget: string }
+      # fields:
+      #   - { name: name, label: Name, widget: string }
+      #   - { name: title, label: Title, widget: string }
+      #   - { name: url, label: URL, widget: string }
+      #   - { name: image_url, label: ImageURL, widget: string }
