--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "lodash": "^4.17.21",
-    "prism-react-renderer": "^2.3.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "prism-react-renderer": "^2.4.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "use-facebook": "^1.2.3"
   },
   "devDependencies": {
-    "@docusaurus/core": "^3.6.3",
-    "@docusaurus/module-type-aliases": "^3.6.3",
-    "@docusaurus/preset-classic": "^3.6.3",
-    "@docusaurus/tsconfig": "^3.6.3",
-    "@docusaurus/types": "^3.6.3",
+    "@docusaurus/core": "^3.7.0",
+    "@docusaurus/module-type-aliases": "^3.7.0",
+    "@docusaurus/preset-classic": "^3.7.0",
+    "@docusaurus/tsconfig": "^3.7.0",
+    "@docusaurus/types": "^3.7.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "typescript": "~5.6.2"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   },
   "browserslist": {
     "production": [
