--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
       "last 5 safari version"
     ]
   },
+  "overrides": {
+    "node-forge": "1.3.2"
+  },
   "engines": {
     "node": ">=18.0"
   }
